testsuite/tests/typecheck/should_fail/T13506.stderr
T13506.hs:16:12: error: [GHC-39999]
    • No instance for ‘FunDep [Char] ()’
        arising from a use of ‘singleton’
    • In the expression: singleton ()
      In an equation for ‘illTyped’: illTyped = singleton ()

